Kubernetes/Web/web-POD.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-web-app
  labels:
    name: my-web-app
spec:
  containers:
  - name: webserver
    image: httpd:2.4
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 8080
