Kubernetes/Web/extra-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: mylb
spec:
  selector:
    app: my-web-app # POD label
  ports:
  - port: 8080 # Port to listen on
    targetPort: 80 # Container Port
