Kubernetes/Web/web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-ingress
spec:
  selector:
    server: webserver
  type:  ClusterIP
  ports:
  - port:  8080     # Port to connect to service (or listen on)
    targetPort:  80 # TargetPort on the 'container' to connect to
