Kubernetes/Web/web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
spec:
  rules:
  - host: my.local.webapp
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ingress-svc
            port: 
              number: 8080
